# silvie

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  server.Dockerfile
server/: .dockerignore  Cargo.toml  Dockerfile  dev_cmd.sh  diesel.toml
server/migrations/2026-06-20-000001_create_users/: down.sql  up.sql
server/migrations/2026-06-20-000002_create_user_info/: down.sql  up.sql
server/migrations/2026-06-20-000003_create_payment_methods/: down.sql  up.sql
server/migrations/2026-06-20-000004_create_issuing_card_log/: down.sql  up.sql
server/migrations/2026-06-20-000005_create_integrations/: down.sql  up.sql
server/migrations/2026-06-20-000006_create_conversations/: down.sql  up.sql
server/migrations/2026-06-22-000001_create_hotel_bookings/: down.sql  up.sql
server/migrations/2026-06-22-000002_add_supplier_locator/: down.sql  up.sql
server/prompts/: calendar_create_description.md  calendar_delete_description.md  calendar_preamble.md  calendar_tool_description.md  calendar_update_description.md
server/prompts/confirmation/: preamble.md
server/prompts/gmail/: get_email.md  list_emails.md  preamble.md  reply_to_email.md  send_email.md
server/prompts/google_calendar/: create_event.md  find_free_time.md  preamble.md  respond_event.md  update_event.md
server/prompts/outlook/: create_event.md  delete_event.md  find_free_time.md  get_email.md  list_emails.md  list_events.md  preamble.md  reply_to_email.md  respond_event.md  send_email.md  update_event.md
server/prompts/travelport/: hotel_availability.md  hotel_book.md  hotel_cancel_booking.md  hotel_details.md  hotel_retrieve_booking.md  hotel_search.md  preamble.md
server/src/: auth.rs  calendar.rs  chat.rs  config.rs  conversations.rs  db.rs  error.rs  integrations.rs  llm.rs  main.rs  payments.rs  schema.rs  server.rs  settings.rs  types.rs  user_info.rs  users.rs
server/src/api/: chat.rs  confirmations.rs  conversations.rs  integrations.rs  mod.rs  payments.rs  tool_responses.rs  user_info.rs  users.rs
(+175 files in other folders)
