[package]
name = "silvie-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silvie-server"
path = "src/main.rs"

[dependencies]
poem = { version = "3", features = ["sse"] }
rig = "0.38.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
config = "0.15.24"
