[package]
name = "silvie-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silvie-server"
path = "src/main.rs"

[dependencies]
poem = { version = "3", features = ["sse"] }
rig = "0.39"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
config = "0.15.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# ── Database (Postgres) ──────────────────────────────────────────────────────
# `diesel` provides the sync API used for running embedded migrations on
# startup; `diesel-async` provides the async pool used by request handlers.
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.9.2", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
bb8 = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }

# ── Auth0 JWT validation ─────────────────────────────────────────────────────
jsonwebtoken = { version = "10", features = ["rust_crypto"]}
# ── Base64 (Gmail API raw message encode/decode) ─────────────────────────────
base64 = "0.22"
